--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "backgroundColor": "#r24180f",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
